# ak

./: CMakeLists.txt  build.ninja  main.cpp  rules.ninja
